force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__Absence_Overlap_Height__c.field-meta.xml
<CustomField>
    <fullName>FSL__Absence_Overlap_Height__c</fullName>
    <description>Set the height of overlapping resource absences on the Gantt</description>
    <label>Absence Overlap Height</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>full</fullName>
            </value>
            <value>
                <fullName>partial</fullName>
                <default>true</default>
                <label>partial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>