force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__DefaultLeftPanel__c.field-meta.xml
<CustomField>
    <fullName>FSL__DefaultLeftPanel__c</fullName>
    <description>The default panel on the left side of the gantt</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Default Left Panel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>