force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__Drag_Na_Label__c.field-meta.xml
<CustomField>
    <fullName>FSL__Drag_Na_Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Drag Na Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>