force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__FavoriteTerritories__c.field-meta.xml
<CustomField>
    <fullName>FSL__FavoriteTerritories__c</fullName>
    <description>List of ids of favorite territories</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Favorite Territories</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>