force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__Filter_Resources_BySkills__c.field-meta.xml
<CustomField>
    <fullName>FSL__Filter_Resources_BySkills__c</fullName>
    <description>List of selected skills for filtering resources.</description>
    <label>Resource Skills</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>