force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__HorizontalScrolling__c.field-meta.xml
<CustomField>
    <fullName>FSL__HorizontalScrolling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Horizontal Scrolling in Gantt</description>
    <label>Horizontal Scrolling in Gantt</label>
    <type>Checkbox</type>
</CustomField>