force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__Invisible_Polygons__c.field-meta.xml
<CustomField>
    <fullName>FSL__Invisible_Polygons__c</fullName>
    <description>List of ids of Invisible polygons on the map</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Hidden Polygons</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>