force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__Optimization_Request_Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>FSL__Optimization_Request_Filter_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Appointment Optimization Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>