force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__Resource_Filter__c.field-meta.xml
<CustomField>
    <fullName>FSL__Resource_Filter__c</fullName>
    <description>Last selected resource filtering for gantt view</description>
    <label>Resource Filter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>