force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__Selected_List_View__c.field-meta.xml
<CustomField>
    <fullName>FSL__Selected_List_View__c</fullName>
    <description>Last selected list view for service appointment list</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Selected List View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>