force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__ServiceListColoring__c.field-meta.xml
<CustomField>
    <fullName>FSL__ServiceListColoring__c</fullName>
    <description>Background styling for service on the list</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Service List Coloring</label>
    <length>20</length>
    <type>Text</type>
</CustomField>