force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__Show_Calendar_Weeks__c.field-meta.xml
<CustomField>
    <fullName>FSL__Show_Calendar_Weeks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show Calendar Weeks in Gantt</description>
    <label>Show Calendar Weeks in Gantt</label>
    <type>Checkbox</type>
</CustomField>