force-app/main/default/objects/FSL__UserSetting__c/fields/FSL__Skills_Logic_Operator__c.field-meta.xml
<CustomField>
    <fullName>FSL__Skills_Logic_Operator__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Skills Filter Logic Operator</label>
    <length>3</length>
    <type>Text</type>
</CustomField>